--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@web3auth/modal-react-hooks": "^9.5.1",
     "@web3auth/solana-provider": "^9.5.1",
     "@web3auth/wallet-services-plugin-react-hooks": "^9.5.1",
-    "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "daisyui": "^4.12.23",
@@ -56,6 +55,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
