--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "viem": "^2.21.57"
+    "viem": "^2.21.57",
+    "@keep-network/tbtc-v2.ts": "~2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
