--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/icons-material": "^5.16.13",
     "@mui/material": "^5.16.13",
     "@reduxjs/toolkit": "^2.5.0",
-    "@safe-global/protocol-kit": "^4.1.0",
+    "@safe-global/protocol-kit": "^4.1.3",
     "@safe-global/relay-kit": "^3.1.0",
     "@stripe/crypto": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -39,6 +39,7 @@
     "dayjs": "^1.11.13",
     "ethers": "^5.7.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.12.0",
     "next": "14.2.3",
     "qrcode": "^1.5.4",
     "react": "^18",
