--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@mui/icons-material": "^5.16.13",
     "@mui/material": "^5.16.13",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
     "@safe-global/protocol-kit": "^4.1.0",
     "@safe-global/relay-kit": "^3.1.0",
@@ -34,10 +36,13 @@
     "@web3auth/wallet-services-plugin-react-hooks": "^9.5.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "daisyui": "^4.12.23",
     "dayjs": "^1.11.13",
     "ethers": "^5.7.2",
+    "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "qrcode": "^1.5.4",
@@ -56,6 +61,8 @@
     "slick-carousel": "^1.8.1",
     "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.57"
   },
   "devDependencies": {
