--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
-    "@mui/icons-material": "^5.16.13",
-    "@mui/material": "^5.16.13",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
@@ -35,7 +33,6 @@
     "@web3auth/solana-provider": "^9.5.1",
     "@web3auth/wallet-services-plugin-react-hooks": "^9.5.1",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -48,7 +45,6 @@
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-apexcharts": "^1.7.0",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "^18",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
@@ -58,6 +54,7 @@
     "react-tooltip": "^5.28.0",
     "redux-logger": "^3.0.6",
     "sass": "^1.83.0",
+    "shadcn-ui": "^0.9.4",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
