added email changes and ses passkey

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ NEXT_PUBLIC_NODE_ENV=development
 NEXT_PUBLIC_RP_ID=localhost
 NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91du5.mongodb.net/madhouse
 
+NEXT_PUBLIC_EMAIL=no-reply@madhousewallet
