--- a/package.json
+++ b/package.json
@@ -27,14 +27,6 @@
     "@svgr/webpack": "^8.1.0",
     "@walletconnect/sign-client": "^2.17.3",
     "@walletconnect/utils": "^2.17.3",
-    "@web3auth/auth-adapter": "^9.5.1",
-    "@web3auth/base": "^9.5.1",
-    "@web3auth/default-evm-adapter": "^9.5.1",
-    "@web3auth/ethereum-provider": "^9.5.1",
-    "@web3auth/modal": "^9.5.1",
-    "@web3auth/modal-react-hooks": "^9.5.1",
-    "@web3auth/solana-provider": "^9.5.1",
-    "@web3auth/wallet-services-plugin-react-hooks": "^9.5.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +39,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "next": "14.2.3",
+    "permissionless": "^0.2.24",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-apexcharts": "^1.7.0",
