added new ses key for email

--- a/.env
+++ b/.env
@@ -8,4 +8,7 @@ NEXT_PUBLIC_NODE_ENV=development
 NEXT_PUBLIC_RP_ID=localhost
 NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91du5.mongodb.net/madhouse
 
-NEXT_PUBLIC_EMAIL=no-reply@madhousewallet
+NEXT_PUBLIC_AWS_S3_REGION= us-east-2
+NEXT_PUBLIC_AWS_S3_ACCESS_KEY=AKIAT3I4BCUAPBR4EQXN
+NEXT_PUBLIC_AWS_S3_SECRET_KEY=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
+NEXT_PUBLIC_EMAIL=madhouse@ondemandcreations.com
