--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-switch": "^7.1.0",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
+    "recharts": "^2.15.0",
     "redux-logger": "^3.0.6",
     "sass": "^1.83.0",
     "shadcn-ui": "^0.9.4",
