--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91
 
 
 NEXT_PUBLIC_EMAIL=madhouse@ondemandcreations.com
+NEXT_PUBLIC_ETH_PRICE_CONTRACT_ADDRESS=0x694AA1769357215DE4FAC081bf1f309aDC325306
+NEXT_PUBLIC_THRESHOLD_CONTRACT_ADDRESS=0x4D74b0eFfa314a79dFd324C129D5b29c11ADbb04
+NEXT_PUBLIC_THUSD_CONTRACT_ADDRESS=0xF3e72cc2e04BB24999718e9b2Ca55fA764c5f9ea
+NEXT_PUBLIC_THRESHOLD_WITHDRWAL_CONTRACT_ADDRESS=0xe2eA5880effFdd234A065dBBC174D6cb8a867167
+NEXT_PUBLIC_THRESHOLD_UPPERHINT_CONTRACT_ADDRESS=0x7C2277b9054B6Fa32790Eb1B6Eb2a43F62e27F8e
+NEXT_PUBLIC_THRESHOLD_LOWERHINT_CONTRACT_ADDRESS=0x9A872029Ee44858EA17B79E30198947907a3a67A
