--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
+    "@nucypher/taco": "^0.5.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@rhinestone/module-sdk": "^0.2.3",
     "@safe-global/protocol-kit": "^4.1.3",
     "@safe-global/relay-kit": "^3.1.0",
     "@stripe/crypto": "^0.0.4",
@@ -39,7 +41,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "next": "14.2.3",
-    "permissionless": "^0.2.24",
+    "permissionless": "^0.2.25",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-apexcharts": "^1.7.0",
