--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@nucypher/taco": "^0.5.0",
+    "@nucypher/taco-auth": "^0.2.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -29,6 +30,9 @@
     "@svgr/webpack": "^8.1.0",
     "@walletconnect/sign-client": "^2.17.3",
     "@walletconnect/utils": "^2.17.3",
+    "@zerodev/ecdsa-validator": "^5.4.2",
+    "@zerodev/passkey-validator": "5.5.0",
+    "@zerodev/sdk": "^5.4.5",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
