--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@zerodev/ecdsa-validator": "^5.4.2",
     "@zerodev/passkey-validator": "5.5.0",
     "@zerodev/sdk": "^5.4.5",
+    "@zerodev/social-validator": "^5.2.1",
+    "@zerodev/weighted-ecdsa-validator": "^5.4.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
