--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-next-app",
+  "name": "my-next-app2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,27 +13,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
-    "@nucypher/taco": "^0.5.0",
-    "@nucypher/taco-auth": "^0.2.0",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@reduxjs/toolkit": "^2.5.0",
-    "@rhinestone/module-sdk": "^0.2.3",
-    "@safe-global/protocol-kit": "^4.1.3",
-    "@safe-global/relay-kit": "^3.1.0",
     "@stripe/crypto": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^1.54.2",
     "@svgr/webpack": "^8.1.0",
-    "@walletconnect/sign-client": "^2.17.3",
-    "@walletconnect/utils": "^2.17.3",
-    "@zerodev/ecdsa-validator": "^5.4.2",
-    "@zerodev/passkey-validator": "5.5.0",
+    "@zerodev/ecdsa-validator": "^5.4.3",
+    "@zerodev/passkey-validator": "^5.5.0",
     "@zerodev/sdk": "^5.4.5",
-    "@zerodev/social-validator": "^5.2.1",
+    "@zerodev/webauthn-key": "^5.4.2",
     "@zerodev/weighted-ecdsa-validator": "^5.4.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
@@ -46,41 +39,37 @@
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
-    "next": "14.2.3",
-    "permissionless": "^0.2.25",
+    "next": "^14.2.3",
     "qrcode": "^1.5.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.28.1",
+    "react-router-dom": "^6.28.2",
     "react-slick": "^0.30.3",
     "react-switch": "^7.1.0",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.15.0",
     "redux-logger": "^3.0.6",
-    "sass": "^1.83.0",
+    "sass": "^1.83.4",
     "shadcn-ui": "^0.9.4",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.5.0",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.57"
+    "viem": "^2.22.14",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "webpack": "^5.97.1"
+    "@types/node": "^20.17.16",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
