--- a/.env
+++ b/.env
@@ -16,3 +16,10 @@ NEXT_PUBLIC_THUSD_CONTRACT_ADDRESS=0xF3e72cc2e04BB24999718e9b2Ca55fA764c5f9ea
 NEXT_PUBLIC_THRESHOLD_WITHDRWAL_CONTRACT_ADDRESS=0xe2eA5880effFdd234A065dBBC174D6cb8a867167
 NEXT_PUBLIC_THRESHOLD_UPPERHINT_CONTRACT_ADDRESS=0x7C2277b9054B6Fa32790Eb1B6Eb2a43F62e27F8e
 NEXT_PUBLIC_THRESHOLD_LOWERHINT_CONTRACT_ADDRESS=0x9A872029Ee44858EA17B79E30198947907a3a67A
+NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://sandbox-pay.fonbnk.com/?
+NEXT_PUBLIC_FONBNK_ONRAMP_SOURCE=x9REDkaz
+NEXT_PUBLIC_FONBNK_OFFRAMP_URL=https://sandbox-pay.fonbnk.com/offramp/?
+NEXT_PUBLIC_FONBNK_OFFRAMP_SOURCE=x9REDkaz
+NEXT_PUBLIC_FONBNK_OFFRAMP_WEBHOOK_SECRET=01JJHFM7CNFPHH2S6SFSN1SDP1
+NEXT_PUBLIC_FONBNK_ONRAMP_WEBHOOK_SECRET=01JJHFM7CNFPHH2S6SFSN1SDP1
+NEXT_PUBLIC_SPHERE_APP_ID=application_ae5b91e2eca8477d9cfcb5251ce40dbb
