--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack": "^5.97.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
