--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "next": "^14.2.3",
+    "puppeteer": "^24.2.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
