--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
+    "moralis": "^2.27.2",
     "next": "^14.2.3",
     "puppeteer": "^24.2.0",
     "qrcode": "^1.5.4",
