Added new changes

--- a/.env
+++ b/.env
@@ -6,10 +6,8 @@ NEXT_PUBLIC_STRIPE_SECRET_KEY=sk_test_51QQgiBBbHYAruVQW5oTxTnwWk5c4OWprFu5XkqX1c
 NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET=whsec_12345
 NEXT_PUBLIC_NODE_ENV=development
 NEXT_PUBLIC_RP_ID=localhost
-mailto:next_public_mongodb_uri=mongodb+srv://ashish:jkohopr1nnhl264f@madhouse-wallet.91du5.mongodb.net/madhouse
-
-
-mailto:next_public_email=madhouse@ondemandcreations.com
+NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jkohopr1nnhl264f@madhouse-wallet.91du5.mongodb.net/madhouse
+NEXT_PUBLIC_RP_ID=madhouse@ondemandcreations.com
 NEXT_PUBLIC_ETH_PRICE_CONTRACT_ADDRESS=0x1b44F3514812d835EB1BDB0acB33d3fA3351Ee43
 NEXT_PUBLIC_THRESHOLD_CONTRACT_ADDRESS=0x4D74b0eFfa314a79dFd324C129D5b29c11ADbb04
 NEXT_PUBLIC_THUSD_CONTRACT_ADDRESS=0xfB4c8DA3B3eCc81a630Cc12E41575f986c74e96e
