--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.16",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
+    "@zerodev/defi": "^0.1.0",
     "@zerodev/ecdsa-validator": "^5.4.3",
     "@zerodev/passkey-validator": "^5.5.0",
     "@zerodev/sdk": "^5.4.19",
@@ -48,6 +49,7 @@
     "mongodb": "^6.12.0",
     "moralis": "^2.27.2",
     "next": "^14.2.3",
+    "permissionless": "^0.2.33",
     "puppeteer": "^24.2.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
