--- a/.env
+++ b/.env
@@ -16,7 +16,9 @@ NEXT_PUBLIC_THUSD_CONTRACT_ADDRESS=0xfB4c8DA3B3eCc81a630Cc12E41575f986c74e96e
 NEXT_PUBLIC_THRESHOLD_WITHDRWAL_CONTRACT_ADDRESS=0x5DDD8D6CC9F583d6Dbd922E8A09c98FDC46c0B7A
 NEXT_PUBLIC_THRESHOLD_UPPERHINT_CONTRACT_ADDRESS=0x7C2277b9054B6Fa32790Eb1B6Eb2a43F62e27F8e
 NEXT_PUBLIC_THRESHOLD_LOWERHINT_CONTRACT_ADDRESS=0x9A872029Ee44858EA17B79E30198947907a3a67A
-NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x5512B8B11dd3470bdB2106D28c9aC54DF6f6d976
+# NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x5512B8B11dd3470bdB2106D28c9aC54DF6f6d976
+NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x18084fbA666a33d37592fA2633fD49a74DD93a88
+
 NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://sandbox-pay.fonbnk.com/?&network=ETHEREUM&freezeWallet=1
 NEXT_PUBLIC_FONBNK_ONRAMP_SOURCE=x9REDkaz
 NEXT_PUBLIC_FONBNK_OFFRAMP_URL=https://sandbox-pay.fonbnk.com/offramp/?&network=ETHEREUM&asset=USDC&freezeWallet=1
