--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cowprotocol/cow-sdk": "^5.10.1-RC.0",
     "@cowprotocol/widget-react": "^0.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@ensofinance/sdk": "^1.0.13",
+    "@ensofinance/shortcuts-widget": "^0.2.52",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
@@ -25,10 +28,12 @@
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.28.6",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
     "@zerodev/ecdsa-validator": "^5.4.3",
     "@zerodev/passkey-validator": "^5.5.0",
     "@zerodev/sdk": "^5.4.19",
+    "@zerodev/waas": "^0.2.0",
     "@zerodev/webauthn-key": "^5.4.2",
     "@zerodev/weighted-ecdsa-validator": "^5.4.1",
     "@zerodev/weighted-validator": "^5.4.4",
