--- a/.env
+++ b/.env
@@ -53,6 +53,8 @@ NEXT_PUBLIC_DAI_CONTRACT_ADDRESS=0x6B175474E89094C44Da98b954EedeAC495271d0F
 # NEXT_PUBLIC_USDC_CONTRACT_ADDRESS=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
 NEXT_PUBLIC_USDC_CONTRACT_ADDRESS=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
 
+
+NEXT_PUBLIC_USDC1_CONTRACT_ADDRESS=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
 NEXT_PUBLIC_USDT_CONTRACT_ADDRESS=0xdac17f958d2ee523a2206206994597c13d831ec7
 
 
