--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@zerodev/ecdsa-validator": "^5.4.3",
     "@zerodev/passkey-validator": "^5.5.0",
     "@zerodev/sdk": "^5.4.19",
-    "@zerodev/waas": "^0.2.0",
     "@zerodev/webauthn-key": "^5.4.2",
     "@zerodev/weighted-ecdsa-validator": "^5.4.1",
     "@zerodev/weighted-validator": "^5.4.4",
@@ -48,6 +47,7 @@
     "dayjs": "^1.11.13",
     "ethers": "^5.7.2",
     "framer-motion": "^12.0.1",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "mongodb": "^6.12.0",
