--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ NEXT_PUBLIC_THRESHOLD_LOWERHINT_CONTRACT_ADDRESS=0x9A872029Ee44858EA17B79E301989
 # NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x5512B8B11dd3470bdB2106D28c9aC54DF6f6d976
 NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x18084fbA666a33d37592fA2633fD49a74DD93a88
 
-NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://sandbox-pay.fonbnk.com/?&network=ETHEREUM&freezeWallet=1
+NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://sandbox-pay.fonbnk.com/?&network=ETHEREUM&asset=USDC&freezeWallet=1
 NEXT_PUBLIC_FONBNK_ONRAMP_SOURCE=x9REDkaz
 NEXT_PUBLIC_FONBNK_OFFRAMP_URL=https://sandbox-pay.fonbnk.com/offramp/?&network=ETHEREUM&asset=USDC&freezeWallet=1
 NEXT_PUBLIC_FONBNK_OFFRAMP_SOURCE=x9REDkaz
