--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ NEXT_PUBLIC_SPHERE_APP_ID=application_ae5b91e2eca8477d9cfcb5251ce40dbb
 
 NEXT_PUBLIC_ENSO_API_KEY=dc6a0639-3f79-4891-a0fd-5f0cf3033943
 
-# NEXT_PUBLIC_ZERODEV_PROJECT_ID=efbc1add-1c14-476e-b3f1-206db80e673c
+# NEXT_PUBLIC_ZERODEV_PROJECT_ID=459dfa57-b4fc-46e4-8e57-df544ead38f9
 # NEXT_PUBLIC_ZERODEV_PROJECT_ID=a00eee06-94e6-4f2a-b952-0cc40ae5cf2a
 NEXT_PUBLIC_ZERODEV_PROJECT_ID=4e8bfd76-e288-465a-8127-beb9396cb537
 
@@ -73,4 +73,9 @@ NEXT_PUBLIC_RECOVERY_ADDRESS = tb1qfpu7q7326kp7ydfjuez0x0k5834dnv8npx553w
 # NEXT_PUBLIC_QUIENCY_BTC_WALLET_ADDRESS=bc1qds4y04antscq4ezr84kt4ksf6xhxm6pn8hr3lc
 
 NEXT_PUBLIC_IMAGE_URL=https://media.madhousewallet.com/
+
+
+
+NEXT_PUBLIC_REGISTRAR_ADDRESS=0xFED6a969AaA60E4961FCD3EBF1A2e8913ac65B72
+NEXT_PUBLIC_RESOLVER_ADDRESS=0x8FADE66B79cC9f707aB26799354482EB93a5B7dD
 
