implement point of sale and fix cowswap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","src/components/Modals/BtcExchangePop/LightningTab.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","src/components/Modals/BtcExchangePop/LightningTab.jsx", "src/components/SideShiftWidget/index.jsx"],
   "exclude": ["node_modules"]
 }
