--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET=whsec_12345
 NEXT_PUBLIC_NODE_ENV=production
 NEXT_PUBLIC_RP_ID=localhost
 NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91du5.mongodb.net/madhouse
-
+NEXT_PUBLIC_DOMAIN = http://localhost:3000/
 
 # NEXT_PUBLIC_EMAIL=madhouse@ondemandcreations.com
 NEXT_PUBLIC_EMAIL=info@madhousewallet.com
