Added new chabnges

--- a/.env
+++ b/.env
@@ -80,3 +80,4 @@ NEXT_PUBLIC_REGISTRAR_ADDRESS=0xFED6a969AaA60E4961FCD3EBF1A2e8913ac65B72
 NEXT_PUBLIC_RESOLVER_ADDRESS=0x8FADE66B79cC9f707aB26799354482EB93a5B7dD
 NEXT_PUBLIC_SIDE_SHIFT_PARENT_ID=UHNxssRFo
 
+NEXT_PUBLIC_SUBDOMAIN_CONTRACT=0x1b45dC0225013ABC25bcC4cc0a770613554D1c40
