--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cors": "^2.8.5",
     "daisyui": "^4.12.23",
     "dayjs": "^1.11.13",
+    "defender-relay-client": "^1.38.3-rc.0",
     "ethers": "^5.7.2",
     "framer-motion": "^12.0.1",
     "html5-qrcode": "^2.3.8",
