--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.28.6",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
+    "@web3auth/base": "^9.7.0",
+    "@web3auth/ethereum-provider": "^9.7.0",
+    "@web3auth/modal": "^9.7.0",
+    "@web3auth/wallet-services-plugin": "^9.7.0",
     "@zerodev/ecdsa-validator": "^5.4.3",
     "@zerodev/passkey-validator": "^5.5.0",
     "@zerodev/sdk": "^5.4.19",
