--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@ensofinance/sdk": "^1.0.13",
     "@ensofinance/shortcuts-widget": "^0.2.52",
+    "@ethersproject/hash": "^5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
