--- a/.env
+++ b/.env
@@ -72,7 +72,7 @@ NEXT_PUBLIC_BOLTZ_MAINNET_WEBSOCKET_ADDRESS=wss://api.boltz.exchange/v2/ws
 
 
 NEXT_PUBLIC_RECOVERY_ADDRESS = tb1qfpu7q7326kp7ydfjuez0x0k5834dnv8npx553w
-# NEXT_PUBLIC_QUIENCY_BTC_WALLET_ADDRESS=bc1qds4y04antscq4ezr84kt4ksf6xhxm6pn8hr3lc
+NEXT_PUBLIC_QUIENCY_BTC_WALLET_ADDRESS=bc1qds4y04antscq4ezr84kt4ksf6xhxm6pn8hr3lc
 
 NEXT_PUBLIC_IMAGE_URL=https://media.madhousewallet.com/
 
