--- a/.env
+++ b/.env
@@ -102,3 +102,6 @@ NEXT_PUBLIC_ENS_DOMAIN_REGISTRAR_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64CAe0E
 NEXT_PUBLIC_ENS_DOMAIN_RESOLVER_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64CAe0E467
 NEXT_PUBLIC_ENS_DOMAIN_REVERSE_REGISTRAR_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64CAe0E467
 NEXT_PUBLIC_ENS_DOMAIN_BASE_REGISTRAR_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64CAe0E467
+
+NEXT_PUBLIC_TBTC_CONTRACT_ADDRESS=0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40 // arbitrum
+NEXT_PUBLIC_COWSWAP_CUSTOM_TOKEN_LIST_URI=https://madhouse-wallet.s3.us-east-1.amazonaws.com/custom-token-list-arbitirum.json
