--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ensofinance/shortcuts-widget": "^0.2.52",
     "@ethersproject/hash": "^5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
+    "@noble/secp256k1": "^2.2.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
