Added changes for lnbit

--- a/.env
+++ b/.env
@@ -110,3 +110,7 @@ NEXT_PUBLIC_ENS_DOMAIN_BASE_REGISTRAR_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64
 
 NEXT_PUBLIC_TBTC_CONTRACT_ADDRESS=0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40
 NEXT_PUBLIC_COWSWAP_CUSTOM_TOKEN_LIST_URI=https://madhouse-wallet.s3.us-east-1.amazonaws.com/custom-token-list-arbitirum.json
+
+
+NEXT_PUBLIC_LNBIT_URL=https://lnbits.madhousewallet.com/
+NEXT_PUBLIC_LNBIT_API_KEY=4a9cb809f06746d5aa5441989e344636
