--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arklabs/wallet-sdk": "^0.0.13",
     "@bitcoinerlab/secp256k1": "^1.2.0",
     "@cowprotocol/cow-sdk": "^5.10.1-RC.0",
     "@cowprotocol/widget-react": "^0.13.0",
@@ -49,6 +50,7 @@
     "daisyui": "^4.12.23",
     "dayjs": "^1.11.13",
     "defender-relay-client": "^1.38.3-rc.0",
+    "ecpair": "^3.0.0",
     "ethers": "^5.7.2",
     "framer-motion": "^12.0.1",
     "html5-qrcode": "^2.3.8",
