add transfer api

--- a/.env
+++ b/.env
@@ -105,3 +105,9 @@ NEXT_PUBLIC_ENS_DOMAIN_BASE_REGISTRAR_ADDRESS=0x025a570A7c5F9C4cA385cF08E9e82e64
 
 NEXT_PUBLIC_TBTC_CONTRACT_ADDRESS=0x1d525fB145Af5c51766a89706C09fE07E6058D1D 
 NEXT_PUBLIC_COWSWAP_CUSTOM_TOKEN_LIST_URI=https://madhouse-wallet.s3.us-east-1.amazonaws.com/custom-token-list-sepolia.json
+
+
+NEXT_PUBLIC_SPHEREPAY_NETWORK=arbitrum
+NEXT_PUBLIC_SPHEREPAY_CURRENCY=usdc
+NEXT_PUBLIC_SPHEREPAY_BASE_URL=https://api.spherepay.co
+NEXT_PUBLIC_SPHEREPAY_API_SECRET=secret_c1cf4d99fd4d4ffcbc1d8a0f32895f22
