--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@arklabs/wallet-sdk": "^0.0.13",
+    "@bigmi/react": "^0.1.1",
     "@bitcoinerlab/secp256k1": "^1.2.0",
     "@cowprotocol/cow-sdk": "^5.10.1-RC.0",
     "@cowprotocol/widget-react": "^0.13.0",
@@ -19,6 +20,7 @@
     "@ensofinance/shortcuts-widget": "^0.2.52",
     "@ethersproject/hash": "^5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
+    "@lifi/widget": "^3.18.7",
     "@noble/secp256k1": "^2.2.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
@@ -26,13 +28,14 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@reduxjs/toolkit": "^2.5.0",
+    "@solana/wallet-adapter-react": "^0.15.37",
     "@stripe/crypto": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^1.54.2",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query": "^5.74.4",
     "@vulpemventures/secp256k1-zkp": "^3.2.1",
     "@zerodev/ecdsa-validator": "^5.4.3",
     "@zerodev/passkey-validator": "^5.5.0",
@@ -88,6 +91,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiny-secp256k1": "^2.2.3",
     "viem": "^2.22.14",
+    "wagmi": "^2.14.16",
     "webpack": "^5.97.1",
     "ws": "^8.18.0"
   },
