--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "@zerodev/weighted-validator": "^5.4.4",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
+    "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^6.1.7",
     "bolt11": "^1.4.1",
     "boltz-core": "^2.2.1",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
