--- a/.env
+++ b/.env
@@ -118,6 +118,11 @@ NEXT_PUBLIC_COWSWAP_CUSTOM_TOKEN_LIST_URI=https://madhouse-wallet.s3.us-east-1.a
 NEXT_PUBLIC_LNBIT_URL=https://lnbits.madhousewallet.com/
 NEXT_PUBLIC_LNBIT_API_KEY=4a9cb809f06746d5aa5441989e344636
 
+
+NEXT_PUBLIC_LNBIT_URL_2=https://spend.madhousewallet.com/
+NEXT_PUBLIC_LNBIT_API_KEY_2=7a383e2a48714a379a7e24b6c660ec4a
+
+
 NEXT_PUBLIC_SPHEREPAY_NETWORK=base
 NEXT_PUBLIC_SPHEREPAY_CURRENCY=usdc
 NEXT_PUBLIC_SPHEREPAY_BASE_URL=https://api.spherepay.co
