--- a/.env
+++ b/.env
@@ -130,3 +130,5 @@ NEXT_PUBLIC_SPHEREPAY_API_SECRET=secret_c1cf4d99fd4d4ffcbc1d8a0f32895f22
 
 NEXT_PUBLIC_SIDESHIFT_AFFILIATE_ID=UHNxssRFo
 NEXT_PUBLIC_SIDESHIFT_SECRET_KEY=ec36c6e251ff8355154bd88dcfe5e249
+
+NEXT_PUBLIC_EXPLORER_URL=https://basescan.org/tx
