--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ NEXT_PUBLIC_ENV_CHAIN_NAME=base
 NEXT_PUBLIC_RP_ID=localhost
 NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91du5.mongodb.net/madhouse
 
-NEXT_PUBLIC_DOMAIN = http://localhost:3000/
+# NEXT_PUBLIC_DOMAIN = http://localhost:3000/
+NEXT_PUBLIC_DOMAIN = https://basechain.d1vj9o3o44bka6.amplifyapp.com/
 # NEXT_PUBLIC_EMAIL=madhouse@ondemandcreations.com
 NEXT_PUBLIC_EMAIL=info@madhousewallet.com
 NEXT_PUBLIC_TBTC_PRICE_CONTRACT_ADDRESS=0x1b44F3514812d835EB1BDB0acB33d3fA3351Ee43
