--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.11.24",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
@@ -101,8 +102,11 @@
     "@types/ws": "^8.5.13",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.3",
+    "jest-worker": "^29.7.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "terser-webpack-plugin": "^5.3.14",
+    "typescript": "^5.7.3",
+    "uglify-js": "^3.19.3"
   }
 }
