--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ NEXT_PUBLIC_ENV_CHAIN_NAME=base
 NEXT_PUBLIC_RP_ID=localhost
 NEXT_PUBLIC_MONGODB_URI=mongodb+srv://ashish:jKohopR1NnHl264f@madhouse-wallet.91du5.mongodb.net/madhouse
 
-# NEXT_PUBLIC_DOMAIN = http://localhost:3000/
-NEXT_PUBLIC_DOMAIN = https://basechain.d1vj9o3o44bka6.amplifyapp.com/
+NEXT_PUBLIC_DOMAIN = http://localhost:3000/
+# NEXT_PUBLIC_DOMAIN = https://basechain.d1vj9o3o44bka6.amplifyapp.com/
 # NEXT_PUBLIC_EMAIL=madhouse@ondemandcreations.com
 NEXT_PUBLIC_EMAIL=info@madhousewallet.com
 NEXT_PUBLIC_TBTC_PRICE_CONTRACT_ADDRESS=0x1b44F3514812d835EB1BDB0acB33d3fA3351Ee43
@@ -117,11 +117,11 @@ NEXT_PUBLIC_COWSWAP_CUSTOM_TOKEN_LIST_URI=https://madhouse-wallet.s3.us-east-1.a
 
 
 NEXT_PUBLIC_LNBIT_URL=https://lnbits.madhousewallet.com/
-NEXT_PUBLIC_LNBIT_API_KEY=4a9cb809f06746d5aa5441989e344636
+NEXT_PUBLIC_LNBIT_API_KEY=9ab51e45a1e64faeba5c55a9380d5b45
 
 
 NEXT_PUBLIC_LNBIT_URL_2=https://spend.madhousewallet.com/
-NEXT_PUBLIC_LNBIT_API_KEY_2=7a383e2a48714a379a7e24b6c660ec4a
+NEXT_PUBLIC_LNBIT_API_KEY_2=b5782742bb3b4d408065256ca0a41069
 
 
 NEXT_PUBLIC_SPHEREPAY_NETWORK=base
