--- a/.env
+++ b/.env
@@ -27,9 +27,10 @@ NEXT_PUBLIC_THRESHOLD_LOWERHINT_CONTRACT_ADDRESS=0x9A872029Ee44858EA17B79E301989
 # NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x5512B8B11dd3470bdB2106D28c9aC54DF6f6d976
 NEXT_PUBLIC_THRESHOLD_TBTC_CONTRACT_ADDRESS=0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40
 
-NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://pay.fonbnk.com?provider=mpesa&country=KE&asset=USDC&freezeWallet=1&network=BASE
+
+NEXT_PUBLIC_FONBNK_ONRAMP_URL=https://pay.fonbnk.com/phone?provider=mpesa&country=KE&freezeWallet=1&network=BASE
 NEXT_PUBLIC_FONBNK_ONRAMP_SOURCE=DmX4Xo5M
-NEXT_PUBLIC_FONBNK_OFFRAMP_URL=https://pay.fonbnk.com/offramp?provider=mpesa&country=KE&network=BASE&asset=USDC&freezeWallet=1
+NEXT_PUBLIC_FONBNK_OFFRAMP_URL=https://pay.fonbnk.com/offramp/phone?provider=mpesa&country=KE&network=BASE&freezeWallet=1
 NEXT_PUBLIC_FONBNK_OFFRAMP_SOURCE=DmX4Xo5M
 NEXT_PUBLIC_FONBNK_OFFRAMP_WEBHOOK_SECRET=68145a1e20e8260cfb5a5b26
 NEXT_PUBLIC_FONBNK_ONRAMP_WEBHOOK_SECRET=68145a1e20e8260cfb5a5b26
