--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@arklabs/wallet-sdk": "^0.0.13",
     "@bitcoinerlab/secp256k1": "^1.2.0",
-    "@cowprotocol/cow-sdk": "^5.10.1-RC.0",
+    "@cowprotocol/cowswap": "file:cowswap/build/cowswap",
     "@cowprotocol/widget-react": "^0.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
