--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "defender-relay-client": "^1.38.3-rc.0",
     "ecpair": "^3.0.0",
@@ -53,6 +54,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
