--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cowprotocol/widget-react": "0.13.0",
     "@ethersproject/hash": "5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
+    "@metamask/delegation-toolkit": "0.11.0",
     "@radix-ui/react-tooltip": "1.1.7",
     "@reduxjs/toolkit": "2.5.0",
     "@stripe/crypto": "0.0.4",
@@ -74,7 +75,7 @@
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
     "tiny-secp256k1": "2.2.3",
-    "viem": "^2.28.0",
+    "viem": "2.28.0",
     "webpack": "5.97.1",
     "ws": "8.18.0"
   },
