--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.2.0",
     "@cowprotocol/widget-react": "^0.13.0",
+    "@ensofinance/sdk": "^1.0.18",
     "@ethersproject/hash": "^5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@radix-ui/react-tooltip": "^1.1.7",
