--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "mongodb": "6.12.0",
     "moralis": "2.27.2",
     "next": "14.2.3",
-    "permissionless": "0.2.33",
-    "pg": "^8.16.0",
+    "permissionless": "0.2.10",
+    "pg": "8.16.0",
     "puppeteer": "24.2.0",
     "qrcode": "1.5.4",
     "react": "18.3.1",
@@ -76,14 +76,16 @@
     "styled-components": "6.1.14",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
+    "timers-promises": "1.0.1",
     "tiny-secp256k1": "2.2.3",
-    "viem": "2.28.0",
+    "viem": "2.30.0",
     "webpack": "5.97.1",
-    "ws": "8.18.0"
+    "ws": "8.18.0",
+    "tsx": "4.19.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
-    "@types/node": "20.17.16",
+    "@types/node": "22.7.9",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@types/ws": "8.5.13",
@@ -95,4 +97,4 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3"
   }
-}
+ }
