usdc send is working

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@ensofinance/sdk": "1.0.18",
     "@ethersproject/hash": "5.8.0",
     "@keep-network/tbtc-v2.ts": "~2.4.1",
-    "@metamask/delegation-toolkit": "0.11.0",
     "@radix-ui/react-tooltip": "1.1.7",
     "@reduxjs/toolkit": "2.5.0",
     "@stripe/crypto": "0.0.4",
@@ -23,12 +22,6 @@
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.16",
     "@vulpemventures/secp256k1-zkp": "3.2.1",
-    "@zerodev/ecdsa-validator": "5.4.3",
-    "@zerodev/passkey-validator": "5.5.0",
-    "@zerodev/sdk": "5.4.34",
-    "@zerodev/webauthn-key": "5.4.2",
-    "@zerodev/weighted-ecdsa-validator": "5.4.1",
-    "@zerodev/weighted-validator": "5.4.4",
     "aws-sdk": "2.1692.0",
     "axios": "1.7.9",
     "bigi": "1.4.2",
@@ -42,7 +35,7 @@
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
     "defender-relay-client": "1.38.3-rc.0",
-    "dotenv": "16.5.0",
+    "dotenv": "^16.5.0",
     "ecpair": "3.0.0",
     "ethers": "5.7.2",
     "framer-motion": "12.12.1",
@@ -78,14 +71,15 @@
     "tailwindcss-animate": "1.0.7",
     "timers-promises": "1.0.1",
     "tiny-secp256k1": "2.2.3",
-    "viem": "2.30.0",
+    "viem": "2.21.33",
     "webpack": "5.97.1",
-    "ws": "8.18.0",
-    "tsx": "4.19.1"
+    "ws": "8.18.0"
+
   },
   "devDependencies": {
+    "tsx": "^4.19.1",
     "@types/cors": "2.8.17",
-    "@types/node": "22.7.9",
+    "@types/node": "^22.7.9",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@types/ws": "8.5.13",
