--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "1.2.0",
-    "@cowprotocol/widget-react": "0.13.0",
     "@ensofinance/sdk": "1.0.18",
     "@ethersproject/hash": "5.8.0",
-    "@keep-network/tbtc-v2.ts": "~2.4.1",
     "@radix-ui/react-tooltip": "1.1.7",
     "@reduxjs/toolkit": "2.5.0",
     "@stripe/crypto": "0.0.4",
@@ -35,7 +33,7 @@
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
     "defender-relay-client": "1.38.3-rc.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "16.5.0",
     "ecpair": "3.0.0",
     "ethers": "5.7.2",
     "framer-motion": "12.12.1",
@@ -47,6 +45,7 @@
     "next": "14.2.3",
     "permissionless": "0.2.10",
     "pg": "8.16.0",
+    "process": "0.11.10",
     "puppeteer": "24.2.0",
     "qrcode": "1.5.4",
     "react": "18.3.1",
@@ -74,12 +73,10 @@
     "viem": "2.21.33",
     "webpack": "5.97.1",
     "ws": "8.18.0"
-
   },
   "devDependencies": {
-    "tsx": "^4.19.1",
     "@types/cors": "2.8.17",
-    "@types/node": "^22.7.9",
+    "@types/node": "22.7.9",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@types/ws": "8.5.13",
@@ -89,6 +86,7 @@
     "jest-worker": "29.7.0",
     "postcss": "8.5.1",
     "tailwindcss": "3.4.17",
+    "tsx": "4.19.1",
     "typescript": "5.7.3"
   }
- }
+}
