--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bitcoinerlab/secp256k1": "1.2.0",
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@ensofinance/sdk": "1.0.18",
     "@ethersproject/hash": "5.8.0",
     "@radix-ui/react-tooltip": "1.1.7",
@@ -69,7 +69,6 @@
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
     "timers-promises": "1.0.1",
-    "tiny-secp256k1": "2.2.3",
     "viem": "2.21.33",
     "webpack": "5.97.1",
     "ws": "8.18.0"
