--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/node": "22.7.9",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@types/ws": "8.5.13",
