added dedicated rpc

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bitcoinerlab/secp256k1": "^1.2.0",
+    "@bitcoinerlab/secp256k1": "1.2.0",
     "@ensofinance/sdk": "1.0.18",
     "@ethersproject/hash": "5.8.0",
-    "@passninja/passninja-js": "^0.6.0",
+    "@passninja/passninja-js": "0.6.0",
     "@radix-ui/react-tooltip": "1.1.7",
     "@reduxjs/toolkit": "2.5.0",
     "@stripe/crypto": "0.0.4",
@@ -24,7 +24,7 @@
     "aws-sdk": "2.1692.0",
     "axios": "1.7.9",
     "bigi": "1.4.2",
-    "bitcoinjs-lib": "^6.1.3",
+    "bitcoinjs-lib": "6.1.3",
     "bolt11": "1.4.1",
     "boltz-core": "2.2.1",
     "buffer": "6.0.3",
@@ -35,7 +35,7 @@
     "dayjs": "1.11.13",
     "defender-relay-client": "1.38.3-rc.0",
     "dotenv": "16.5.0",
-    "ecpair": "^2.1.0",
+    "ecpair": "2.1.0",
     "ethers": "5.7.2",
     "framer-motion": "12.12.1",
     "html5-qrcode": "2.3.8",
@@ -78,7 +78,7 @@
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/node": "22.7.9",
-    "@types/qrcode": "^1.5.5",
+    "@types/qrcode": "1.5.5",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@types/ws": "8.5.13",
