--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "ecpair": "2.1.0",
     "ethers": "5.7.2",
     "framer-motion": "12.12.1",
-    "html5-qrcode": "2.3.8",
     "iso-3166-1": "2.1.1",
     "moment": "2.30.1",
     "mongodb": "6.12.0",
@@ -64,6 +63,7 @@
     "redux-logger": "3.0.6",
     "remeda": "2.20.0",
     "sass": "1.83.4",
+    "scanbot-web-sdk": "^7.2.0",
     "slick-carousel": "1.8.1",
     "stripe": "17.5.0",
     "styled-components": "6.1.14",
