--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ethers": "5.7.2",
     "framer-motion": "12.12.1",
     "iso-3166-1": "2.1.1",
+    "micro": "^10.0.1",
     "moment": "2.30.1",
     "mongodb": "6.12.0",
     "moralis": "2.27.2",
