--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.830.0",
+    "@aws-sdk/client-lambda": "3.830.0",
     "@bitcoinerlab/secp256k1": "1.2.0",
     "@ensofinance/sdk": "1.0.18",
     "@ethersproject/hash": "5.8.0",
@@ -40,7 +40,7 @@
     "ethers": "5.8.0",
     "framer-motion": "12.12.1",
     "iso-3166-1": "2.1.1",
-    "micro": "^10.0.1",
+    "micro": "10.0.1",
     "moment": "2.30.1",
     "mongodb": "6.12.0",
     "moralis": "2.27.2",
