--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "framer-motion": "12.12.1",
     "iso-3166-1": "2.1.1",
     "micro": "10.0.1",
-    "moment": "2.30.1",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "mongodb": "6.12.0",
     "moralis": "2.27.2",
