--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-otp-input": "3.1.1",
     "react-redux": "9.2.0",
     "react-router-dom": "6.28.2",
+    "react-simple-captcha": "^9.3.1",
     "react-slick": "0.30.3",
     "react-tooltip": "5.28.0",
     "react-use": "17.6.0",
