--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react-apexcharts": "1.7.0",
     "react-date-range": "2.0.1",
     "react-dom": "18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-otp-input": "3.1.1",
     "react-redux": "9.2.0",
     "react-router-dom": "6.28.2",
