--- a/package.json
+++ b/package.json
@@ -54,12 +54,10 @@
     "react-apexcharts": "1.7.0",
     "react-date-range": "2.0.1",
     "react-dom": "18.3.1",
-    "react-google-recaptcha": "^3.1.0",
-    "react-google-recaptcha-v3": "^1.11.0",
+    "react-google-recaptcha": "3.1.0",
     "react-otp-input": "3.1.1",
     "react-redux": "9.2.0",
     "react-router-dom": "6.28.2",
-    "react-simple-captcha": "^9.3.1",
     "react-slick": "0.30.3",
     "react-tooltip": "5.28.0",
     "react-use": "17.6.0",
