--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tailwindcss-animate": "1.0.7",
     "timers-promises": "1.0.1",
     "tiny-secp256k1": "2.2.3",
+    "uuid": "^12.0.0",
     "viem": "2.21.33",
     "webpack": "5.97.1",
     "ws": "8.18.0"
@@ -83,6 +84,7 @@
     "@types/qrcode": "1.5.5",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "8.5.13",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.3",
