--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "buffer": "6.0.3",
     "clsx": "2.1.1",
     "cors": "2.8.5",
-    "country-state-city": "^3.2.1",
+    "country-state-city": "3.2.1",
+    "crypto-js": "4.2.0",
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
     "dotenv": "16.5.0",
@@ -46,7 +47,6 @@
     "permissionless": "0.2.10",
     "pg": "8.16.0",
     "process": "0.11.10",
-    "puppeteer": "24.2.0",
     "qrcode": "1.5.4",
     "react": "18.3.1",
     "react-apexcharts": "1.7.0",
@@ -78,12 +78,18 @@
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
+    "@types/d3-color": "3.1.3",
+    "@types/d3-path": "3.1.1",
+    "@types/eslint": "9.6.1",
+    "@types/istanbul-lib-report": "3.0.3",
     "@types/node": "22.7.9",
+    "@types/prop-types": "15.7.15",
     "@types/qrcode": "1.5.5",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "10.0.0",
     "@types/ws": "8.5.13",
+    "@types/yargs-parser": "21.0.3",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-unused-imports": "4.1.4",
